Working code for replication involving client, middleware and resource-managers